# mujoco_ws

./: README.md
dummy_description/meshes/: base_link.STL  finger_left.STL  finger_right.STL  forearm_link.STL  grip_left.STL  grip_right.STL  shoulder_link.STL  wrist1_link.STL  wrist2_link.STL  wrist3_link.STL
dummy_description/mjcf/: dummy.xml  scene.xml
dummy_description/urdf/: dummy_gripper.csv  dummy_gripper.urdf
scripts/: MUJOCO_LOG.TXT  contral_joints.py  ctrl_ee_pin.py  get_body_pos.py  move_dummy_pos.py  test_pinocchio.py  trajectory_plan_toppra.py
src/: CMakeLists.txt  dummy_inverse_dynamics.cpp
